[gd_scene load_steps=28 format=2]

[ext_resource path="res://normalEnemy/herochar_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://normalEnemy/normalEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/dagger.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("normalEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("normalEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("normalEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("normalEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=5]
resource_name = "takeDamage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("normalEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.0
height = 2.0

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "takeDamage"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachine" id=7]
states/attack/node = SubResource( 23 )
states/attack/position = Vector2( 232, 137 )
states/death/node = SubResource( 9 )
states/death/position = Vector2( 829, 137 )
states/idle/node = SubResource( 10 )
states/idle/position = Vector2( 391, 137 )
states/run/node = SubResource( 11 )
states/run/position = Vector2( 391, 43 )
states/takeDamage/node = SubResource( 12 )
states/takeDamage/position = Vector2( 606, 137 )
transitions = [ "idle", "run", SubResource( 13 ), "run", "idle", SubResource( 14 ), "idle", "takeDamage", SubResource( 15 ), "run", "takeDamage", SubResource( 17 ), "takeDamage", "death", SubResource( 19 ), "takeDamage", "idle", SubResource( 20 ), "idle", "attack", SubResource( 24 ), "attack", "idle", SubResource( 25 ), "run", "attack", SubResource( 26 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( 29, -39 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 72.5, 10 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8.4, 10 )

[node name="normalEnemy" type="KinematicBody2D"]
scale = Vector2( 2.5, 2.5 )
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="normalEnemySprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 15
frame = 42

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/death = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )
anims/takeDamage = SubResource( 5 )

[node name="neCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 8 )

[node name="detectA2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectA2D"]
shape = SubResource( 21 )

[node name="attackA2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackA2D"]
position = Vector2( 3.33786e-07, 0 )
scale = Vector2( 1, 1 )
shape = SubResource( 22 )

[node name="dagger" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="detectA2D" to="." method="chasePlayer"]
[connection signal="body_exited" from="detectA2D" to="." method="stopChasingPlayer"]
[connection signal="body_entered" from="attackA2D" to="." method="attackPlayerFlagSet"]
[connection signal="body_exited" from="attackA2D" to="." method="attackPlayerFlagRemove"]
